--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,14 @@
 </head>
 
 <body>
-    
+    <h1>Enviando um Post</h1>
+    <form action="">
+        <label for="title">Titulo</label> <br>
+        <input type="text" name="title" id="title"> <br>
+        <button type="submit">Enviar</button>
+    </form>
+
+    <script src="./post.js"></script>
 </body>
+
 </html>
