--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Enviando um Post</h1>
+    <form id="my-form"></form>
     <form action="">
         <label for="title">Titulo</label> <br>
         <input type="text" name="title" id="title"> <br>
