--- a/index.html
+++ b/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posts</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Posts</title>
 </head>
-
 <body>
-    <h1>Enviando um Post</h1>
-    <form id="my-form"></form>
-    <form action="">
-        <label for="title">Titulo</label> <br>
-        <input type="text" name="title" id="title"> <br>
-        <button type="submit">Enviar</button>
-    </form>
+  <h1>Enviando um post</h1>
+  <form id="my-form">
+    <label for="title">Titulo</label><br>
+    <input type="text" name="title" id="title"/> <br>
+    <button type="submit"> Enviar</button>
+  </form>
 
-    <script src="./post.js"></script>
+  <script src="./post.js"></script>
 </body>
-
 </html>
