--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
   <form id="my-form">
     <label for="title">Titulo</label><br>
     <input type="text" name="title" id="title"/> <br>
+    <label for="image">Imagem: </label><br>
+    <input type="file" name="image" id="image"><br>
+    <br>
     <button type="submit"> Enviar</button>
   </form>
 
+  <div id="latest-post">
+
+  </div>
+
   <script src="./post.js"></script>
+  <script src=""></script>
 </body>
 </html>
