--- a/index.html
+++ b/index.html
@@ -4,24 +4,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
   <title>Posts</title>
 </head>
-<body>
-  <h1>Enviando um post</h1>
-  <form id="my-form">
-    <label for="title">Titulo</label><br>
-    <input type="text" name="title" id="title"/> <br>
-    <label for="image">Imagem: </label><br>
-    <input type="file" name="image" id="image"><br>
-    <br>
-    <button type="submit"> Enviar</button>
-  </form>
+<body id="body">
+    <nav>
+        <button onclick="darkTheme()" >Tema Dark</button>
+        <button onclick="lightTheme()" >Tema Light</button>
+    </nav>
+    
+    <h1>Enviando um post</h1>
+    <form id="my-form">
+        <label for="title">Titulo</label><br>
+        <input type="text" name="title" id="title"/> <br>
+        <label for="image">Imagem: </label><br>
+        <input type="file" name="image" id="image"><br>
+        <br>
+        <button type="submit"> Enviar</button>
+    </form>
 
   <div id="latest-post">
-
   </div>
 
   <script src="./post.js"></script>
-  <script src=""></script>
+  <script src="./style.js"></script>
 </body>
 </html>
