--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./Animation.css">
   <title>Posts</title>
 </head>
-<body id="body">
+<body id="body" class="anima body-dark">
     <nav>
         <button onclick="darkTheme()" >Tema Dark</button>
         <button onclick="lightTheme()" >Tema Light</button>
